Finishing home style

--- a/src/account-overview/account-overview.css
+++ b/src/account-overview/account-overview.css
@@ -1,3 +1,9 @@
 .AccountOverview {
-  background-color: lightblue;
+  padding: 20px;
+  max-width: 800px;
+  margin: auto;
+}
+
+.support-contact, .sales-info, .sales-metrics {
+  margin-bottom: 20px;
 }
