--- a/src/account-overview/account-overview.css
+++ b/src/account-overview/account-overview.css
@@ -2,5 +2,14 @@
   padding: 20px;
   max-width: 800px;
   margin: auto;
+  display: flex;
+  flex-direction: column;
 }
 
+.account-container{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 20px;
+}
