--- a/src/sales-metrics/SalesMetrics.css
+++ b/src/sales-metrics/SalesMetrics.css
@@ -4,7 +4,15 @@
 }
 
 .metric {
-  text-align: center;
+  text-align: left;
   font-size: 24px;
   color: green;
+  margin-right: auto;
+  padding-left: 20px;
+  width: 100%;
+}
+
+.sales-metrics > :first-child{
+  border-right: 1px solid;
+  border-color: #ededed;
 }
