--- a/src/sales-metrics/SalesMetrics.css
+++ b/src/sales-metrics/SalesMetrics.css
@@ -5,8 +5,8 @@
 
 .metric {
   text-align: left;
-  font-size: 24px;
-  color: green;
+  font-size: 20px;
+  color: #a5a2a2;;
   margin-right: auto;
   padding-left: 20px;
   width: 100%;
@@ -15,4 +15,18 @@
 .sales-metrics > :first-child{
   border-right: 1px solid;
   border-color: #ededed;
+}
+
+.metric > :first-child {
+  color: #22ab55;
+  font-size: 5vh;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 0px;
+}
+
+.text-info {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
