--- a/src/account-overview/account-overview.css
+++ b/src/account-overview/account-overview.css
@@ -9,7 +9,7 @@
 
 .account-container{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   margin-bottom: 20px;
@@ -18,4 +18,15 @@
 .account-overview-container{
   background-color: #ffffff;
   border-radius: 5px;
+}
+
+.account-container-title{
+  width: 50%;
+  text-align: left;
+}
+
+
+.account-container-title > p {
+  color: #423f40;
+  font-size: 3.5vh;
 }
