--- a/src/sales-metrics/SalesMetrics.css
+++ b/src/sales-metrics/SalesMetrics.css
@@ -6,18 +6,18 @@
 .metric {
   text-align: left;
   font-size: 1.5vh;
-  color: #a5a2a2;;
+  color: #a5a2a2;
   margin-right: auto;
   padding-left: 20px;
   width: 100%;
 }
 
-.sales-metrics > :first-child{
+.sales-metrics> :first-child {
   border-right: 1px solid;
   border-color: #ededed;
 }
 
-.metric > :first-child {
+.metric> :first-child {
   color: #22ab55;
   font-size: 4vh;
   font-weight: bold;
